--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 <div id="musseltop">
-	<h1><a href="#">Müsselmuff</a></h1>
+	<h1><a href="#">M W Keller</a></h1>
 </div>
 <div id="musselbottom">
 	info@mwkeller.com
