--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-<title>Müsselmuff</title>
+<title>M W Keller</title>
 <meta charset="utf-8">
-<meta name="keywords" content="art, surrealism, space, architecture, Müsselmuff, Mark Müsselmuff">
-<meta name="description" content="Mark Müsselmuff does soft surrealism: fun times good times.">
-<meta name="author" content="Mark Müsselmuff">
+<meta name="keywords" content="data visualization">
+<meta name="description" content="Mark Keller">
+<meta name="author" content="Mark Keller">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Müsselmuff</title>
 <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
