--- a/temperature.html
+++ b/temperature.html
@@ -3,7 +3,7 @@
 <head>
   <title>Salt Spring Island Wind</title>
 
-  <script async type='text/javascript' src='js/windrose.js'></script>
+  <script async type='text/javascript' src='js/temperature.js'></script>
   <link href="css/nouislider.css" rel="stylesheet">
   <style>
   html, body, div, canvas {
@@ -11,17 +11,16 @@
       padding: 0;
   }
   canvas{
-    margin-left:100px;
+    margin-left:150px;
   }
   html, body {
     overflow-x: hidden;
     overflow-y: hidden;
-    font-size: 10px;
+    font-size: 9px;
     font-family: monospace;
     color: #000;
-    font-weight: bold;
   }
-  #month, #hour {
+  #year, #month, #day, #hour {
     position: absolute;
     height: 80%;
     top:10%;
@@ -31,24 +30,42 @@
     bottom:5%;
   }
 
+  #year {
+    left: 100px;
+  }
+  #yearText {
+    left: 102px;
+  }
+
   #month {
-    left: 140px;
+    left: 160px;
   }
   #monthText {
-    left: 142px;
+    left: 162px;
+  }
+
+  #day {
+    left: 220px;
+  }
+  #dayText {
+    left: 222px;
   }
 
   #hour {
-    left: 200px;
+    left: 280px;
   }
   #hourText {
-    left: 202px;
+    left: 282px;
   }
   </style>
 </head>
 <body>
+    <div class="sliders" id="year"></div>
+    <div class="sliderText" id="yearText">Y</div>
     <div class="sliders" id="month"></div>
     <div class="sliderText" id="monthText">M</div>
+    <div class="sliders" id="day"></div>
+    <div class="sliderText" id="dayText">D</div>
     <div class="sliders" id="hour"></div>
     <div class="sliderText" id="hourText">H</div>
   <canvas id="canvass" width="400" height="400">
