--- a/windrose.html
+++ b/windrose.html
@@ -44,6 +44,10 @@
   #hourText {
     left: 202px;
   }
+  #key {
+    left:50%;
+    margin-left:-45px;
+  }
   </style>
 </head>
 <body>
@@ -51,6 +55,7 @@
     <div class="sliderText" id="monthText">M</div>
     <div class="sliders" id="hour"></div>
     <div class="sliderText" id="hourText">H</div>
+    <div class="sliderText" id="key">VICTORIA INTERNATIONAL AIRPORT WIND ROSE IN KM/H</div>
   <canvas id="canvass" width="400" height="400">
     This text is displayed if your browser does not support HTML5 Canvas.
   </canvas>
