--- a/windrose.html
+++ b/windrose.html
@@ -3,7 +3,7 @@
 <head>
   <title>Salt Spring Island Wind</title>
 
-  <script async type='text/javascript' src='js/windrose.js'></script>
+  <script async type='text/javascript' src='js/windrose2.js'></script>
   <link href="css/nouislider.css" rel="stylesheet">
   <style>
   html, body, div, canvas {
