--- a/windrose.html
+++ b/windrose.html
@@ -16,7 +16,7 @@
   html, body {
     overflow-x: hidden;
     overflow-y: hidden;
-    font-size: 10px;
+    font-size: 9px;
     font-family: monospace;
     color: #000;
     font-weight: bold;
@@ -46,7 +46,7 @@
   }
   #key {
     left:50%;
-    margin-left:-45px;
+    margin-left:-60px;
   }
   </style>
 </head>
@@ -55,7 +55,7 @@
     <div class="sliderText" id="monthText">M</div>
     <div class="sliders" id="hour"></div>
     <div class="sliderText" id="hourText">H</div>
-    <div class="sliderText" id="key">VICTORIA INTERNATIONAL AIRPORT WIND ROSE IN KM/H</div>
+    <div class="sliderText" id="key">VICTORIA INTERNATIONAL AIRPORT WIND ROSE IN KM/H, 2014 - 2017</div>
   <canvas id="canvass" width="400" height="400">
     This text is displayed if your browser does not support HTML5 Canvas.
   </canvas>
