--- a/video.html
+++ b/video.html
@@ -5,16 +5,36 @@
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
   <style>
   html, body, div{
-      margin: 0;
-      padding: 0;
+    margin: 0;
+    padding: 0;
   }
   html, body {
     overflow-x: hidden;
     overflow-y: hidden;
-    font-size: 9px;
+    font-size: 30px;
     font-family: 'Rock Salt', monospace;
-    color: #000;
-    font-weight: bold;
+    color: #fff;
+  }
+  .navigation{
+    position: absolute;
+    width:100%;
+    text-align: center;
+    bottom:30%;
+  }
+  #player{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background-size: cover;
   }
   </style>
 </head>
