--- a/video.html
+++ b/video.html
@@ -11,7 +11,7 @@
   html, body {
     overflow-x: hidden;
     overflow-y: hidden;
-    font-size: 30px;
+    font-size: 50px;
     font-family: 'Rock Salt', monospace;
     color: #fff;
   }
@@ -35,12 +35,19 @@
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
     background-size: cover;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    outline: 0;
   }
   </style>
 </head>
 <body>
   <div id="links" class="navigation">
-    Tour / Contact / About
+    Tour   /   Contact   /   About
   </div>
 
   <div id="player">
