--- a/video.html
+++ b/video.html
@@ -11,7 +11,7 @@
   html, body {
     overflow-x: hidden;
     overflow-y: hidden;
-    font-size: 40px;
+    font-size: 30px;
     font-family: 'Rock Salt', monospace;
     color: #fff;
   }
@@ -23,7 +23,6 @@
     -ms-user-select: none;
     user-select: none;
     outline: 0;
-  }
   }
   .navigation{
     position: absolute;
@@ -57,7 +56,7 @@
 </head>
 <body>
   <div id="links" class="navigation">
-    Tour&nbsp;&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;&nbsp;About
+    Tour&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;About
   </div>
 
   <div id="player">
