--- a/video.html
+++ b/video.html
@@ -11,7 +11,7 @@
   html, body {
     overflow-x: hidden;
     overflow-y: hidden;
-    font-size: 30px;
+    font-size: 34px;
     font-family: 'Rock Salt', monospace;
     color: #fff;
   }
@@ -28,7 +28,7 @@
     position: absolute;
     width:100%;
     text-align: center;
-    bottom:25%;
+    bottom:30%;
   }
   #player{
     position: fixed;
@@ -56,11 +56,11 @@
 </head>
 <body>
   <div id="links" class="navigation">
-    Tour&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;About
+    Tour&nbsp;&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;About
   </div>
 
   <div id="player">
-    <iframe src="https://player.vimeo.com/video/220835729?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/216691562?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
 </body>
 </html>
