--- a/video.html
+++ b/video.html
@@ -14,8 +14,6 @@
     font-size: 34px;
     font-family: 'Rock Salt', monospace;
     color: #fff;
-  }
-  iframe{
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -23,6 +21,8 @@
     -ms-user-select: none;
     user-select: none;
     outline: 0;
+  }
+  iframe{
   }
   .navigation{
     position: absolute;
@@ -44,13 +44,7 @@
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
     background-size: cover;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    outline: 0;
+    pointer-events:none
   }
   </style>
 </head>
