--- a/video.html
+++ b/video.html
@@ -28,6 +28,12 @@
     position: absolute;
     width:100%;
     text-align: center;
+  }
+  #billi{
+    font-size: 150px;
+    top:10%;
+  }
+  #links{
     bottom:30%;
   }
   #player{
@@ -49,6 +55,9 @@
   </style>
 </head>
 <body>
+  <div id="billi" class="navigation">
+    BILLI NASH
+  </div>
   <div id="links" class="navigation">
     Tour&nbsp;&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;About
   </div>
