--- a/video.html
+++ b/video.html
@@ -11,7 +11,7 @@
   html, body {
     overflow-x: hidden;
     overflow-y: hidden;
-    font-size: 34px;
+    font-size: 30px;
     font-family: 'Rock Salt', monospace;
     color: #fff;
     -webkit-touch-callout: none;
@@ -34,7 +34,7 @@
     top:10%;
   }
   #links{
-    bottom:30%;
+    bottom:28%;
   }
   #player{
     position: fixed;
@@ -55,11 +55,8 @@
   </style>
 </head>
 <body>
-  <div id="billi" class="navigation">
-    BILLI NASH
-  </div>
   <div id="links" class="navigation">
-    Tour&nbsp;&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;About
+    Tour / Contact / About
   </div>
 
   <div id="player">
