--- a/video.html
+++ b/video.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Billi Nash</title>
+  <title>BILLI NASH</title>
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
   <style>
   html, body, div, iframe{
@@ -60,7 +60,7 @@
   </div>
 
   <div id="player">
-    <iframe src="https://player.vimeo.com/video/216691562?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/220835729?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
 </body>
 </html>
