--- a/billi.html
+++ b/billi.html
@@ -22,8 +22,6 @@
     user-select: none;
     outline: 0;
   }
-  iframe{
-  }
   .navigation{
     position: absolute;
     width:100%;
@@ -34,7 +32,7 @@
     top:10%;
   }
   #links{
-    bottom:28%;
+    bottom:25%;
   }
   #player{
     position: fixed;
@@ -56,7 +54,7 @@
 </head>
 <body>
   <div id="links" class="navigation">
-    Tour / Contact / About
+    <a href="tour.html">Tour</a>&nbsp;&nbsp;/&nbsp;&nbsp;Contact&nbsp;&nbsp;/&nbsp;&nbsp;About
   </div>
 
   <div id="player">
