--- a/billi.html
+++ b/billi.html
@@ -4,6 +4,10 @@
   <title>BILLI NASH</title>
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
   <style>
+  a{
+    color:inherit;
+    text-decoration:inherit;
+  }
   html, body, div, iframe{
     margin: 0;
     padding: 0;
@@ -54,7 +58,7 @@
 </head>
 <body>
   <div id="links" class="navigation">
-    <a href="tour.html">Tour</a>&nbsp;&nbsp;/&nbsp;&nbsp;Contact&nbsp;&nbsp;/&nbsp;&nbsp;About
+    <a href="billiTour.html">Tour</a>&nbsp;/&nbsp;Contact&nbsp;/&nbsp;About
   </div>
 
   <div id="player">
