--- a/billi.html
+++ b/billi.html
@@ -58,7 +58,7 @@
 </head>
 <body>
   <div id="links" class="navigation">
-    <a href="billiTour.html">Tour</a>&nbsp;/&nbsp;Contact&nbsp;/&nbsp;About
+    <a href="billiVideo.html">Video</a>&nbsp;/&nbsp;<a href="billiTour.html">Tour</a>&nbsp;/&nbsp;<a href="billiContact.html">Contact</a>
   </div>
 
   <div id="player">
