--- a/billiTour.html
+++ b/billiTour.html
@@ -40,7 +40,7 @@
 </head>
 <body>
   <div id="links" class="navigation">
-    Tour&nbsp;&nbsp;/&nbsp;&nbsp;Contact&nbsp;&nbsp;/&nbsp;&nbsp;About
+    <a href="billiVideo.html">Video</a>&nbsp;/&nbsp;<a href="billiTour.html">Tour</a>&nbsp;/&nbsp;<a href="billiContact.html">Contact</a>
   </div>
 </body>
 </html>
