--- a/billiTour.html
+++ b/billiTour.html
@@ -4,6 +4,10 @@
   <title>BILLI NASH</title>
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
   <style>
+  a{
+    color:inherit;
+    text-decoration:inherit;
+  }
   html, body, div, iframe{
     margin: 0;
     padding: 0;
@@ -21,8 +25,6 @@
     -ms-user-select: none;
     user-select: none;
     outline: 0;
-  }
-  iframe{
   }
   .navigation{
     position: absolute;
