--- a/billi.html
+++ b/billi.html
@@ -81,7 +81,7 @@
     <a href="billiVideo.html">Video</a>&nbsp;/&nbsp;<a href="billiTour.html">Tour</a>&nbsp;/&nbsp;<a href="billiContact.html">Contact</a>
   </div>
 
-  <div clas="iframe-wrapper">
+  <div class="iframe-wrapper">
     <iframe src="https://player.vimeo.com/video/220835729?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0" width="1920" height="1080" frameborder="0"></iframe>
   </div>
 </body>
