--- a/billi.html
+++ b/billi.html
@@ -26,26 +26,6 @@
     user-select: none;
     outline: 0;
   }
-  .iframe-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  pointer-events: none;
-  overflow: hidden;
-}
-.iframe-wrapper iframe {
-  width: 100vw;
-  height: 56.25vw; /* Given a 16:9 aspect ratio, 9/16*100 = 56.25 */
-  min-height: 100vh;
-  min-width: 177.77vh; /* Given a 16:9 aspect ratio, 16/9*100 = 177.77 */
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
   .navigation{
     position: absolute;
     width:100%;
@@ -81,7 +61,7 @@
     <a href="billiVideo.html">Video</a>&nbsp;/&nbsp;<a href="billiTour.html">Tour</a>&nbsp;/&nbsp;<a href="billiContact.html">Contact</a>
   </div>
 
-  <div class="iframe-wrapper">
+  <div id="player">
     <iframe src="https://player.vimeo.com/video/220835729?autoplay=1&loop=1&color=ffffff&title=0&byline=0&portrait=0" width="1920" height="1080" frameborder="0"></iframe>
   </div>
 </body>
