--- a/intent.html
+++ b/intent.html
@@ -8,16 +8,15 @@
 <meta name="author" content="Mark Keller">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Intent</title>
-<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
 <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-    <div id="top">
+    <div id="top" class="content">
 	   <a href="index.html">M W Keller</a>
     </div>
 
-    <div id="content"><div class="text">
+    <div id="middle" class="content text">
         Mission statement.<br><br>
         To provide visual side of irrefutable information, which in a time of alternative facts, requires no fact-checking. A more potent and visceral means of surveying hard numbers. It both elucidates latent trends through cognitive pattern recognition faculties, but perhaps more significantly, acts as an immediate and visceral front to the hard information that is otherwise so easily dismissed via alternative facts and competing narratives. This is the electrate come to the spreadsheet. It both markets towards those graphics -hungry grant writers and coadta-consumers, but also enters a new social arena of sharable, digestible, tidbits. The visual compels, is transmitted, allows inspection and pattern recognition, and puts a body to ghostly numbers. A corpus to stand and take a beating, or to beat itself.<br><br>
         Of the postmodern, a theorist wrote it is a series of images, layered and glossy, which never unveil a hard substrate, but which peel off to other more obscure and obfuscated pornography.<br><br>
@@ -33,9 +32,9 @@
         The argument is that the disciplines of Arts and Letters have as much to contribute to the essential formation of electracy as do science, engineering, computing and related technical fields. Up until the seventeenth century, the technological and rhetorical dimensions of artificial memory developed together. The image logics of the memory arts were discredited in the context of the emerging empirical sciences because of their association with hermetic magic. One of the laws of media, according to Marshall McLuhan, is that innovation involves the retrieval of some features from the cultural archive thought to be obsolete.<br><br>
         Electracy needs to do for digital imaging what literacy did for the written word. The purpose of my pedagogy, then, is to learn to use the figural as a mode of image reason, as a supplement to the existing institutional commitment to argumentation and analysis.<br><br>
         “Today,” Virilio says, “the media no longer exists as narratives but rather as flashes and images. History is therefore being reduced to images”
-        </div></div>
+        </div>
 
-    <div id="bottom">
+    <div id="bottom" class="content">
 	   <a href="mailto:mwkeller@umich.edu" target="_blank">mwkeller@umich.edu</a>
     </div>
 
