--- a/intent.html
+++ b/intent.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-<title>M W Keller</title>
+<title>M W KELLER</title>
 <meta charset="utf-8">
 <meta name="keywords" content="humane architecture">
 <meta name="description" content="Mark Keller">
 <meta name="author" content="Mark Keller">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Intent</title>
-<link href="css/stylesheet.css" rel="stylesheet" type="text/css">
+<link href="css/typical.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <div id="top">
-	   <a href="index.html">M W Keller</a>
+	   <a href="index.html">M W KELLER</a>
     </div>
 
     <div id="middle" class="text">
@@ -35,7 +35,7 @@
         </div>
 
     <div id="bottom">
-	   <a href="mailto:mwkeller@umich.edu" target="_blank">mwkeller@umich.edu</a>
+	   <a href="mailto:mwkeller@umich.edu" target="_blank">MWKELLER@UMICH.EDU</a>
     </div>
 
 </body>
