--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
 <title>M W Keller</title>
 <meta charset="utf-8">
-<meta name="keywords" content="data visualization">
+<meta name="keywords" content="Humane Architecture">
 <meta name="description" content="Mark Keller">
 <meta name="author" content="Mark Keller">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Müsselmuff</title>
-<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
-<link href="css/stylesheet.css" rel="stylesheet" type="text/css">
+<title>M W Keller</title>
+<link href="css/typical.css" rel="stylesheet" type="text/css">
 <style>
     .text{
         max-width:366px;
