--- a/index.html
+++ b/index.html
@@ -9,21 +9,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>M W Keller</title>
 <link href="css/typical.css" rel="stylesheet" type="text/css">
-<style>
-    .text{
-        max-width:366px;
-        line-height: 12px;
-    }
-</style>
 </head>
 
 <body>
-<div id="musseltop">
-	<h1><a href="#">M W Keller</a></h1>
-</div>
-<div id="musselbottom">
-	info@mwkeller.com
-</div>
+  <div id="top">
+   <a href="index.html">M W Keller</a>
+  </div>
+
+  <div id="bottom">
+   <a href="mailto:mwkeller@umich.edu" target="_blank">mwkeller@umich.edu</a>
+  </div>
 
 </body>
 </html>
