--- a/intent.html
+++ b/intent.html
@@ -16,7 +16,7 @@
 	   <a href="index.html">M W Keller</a>
     </div>
 
-    <div id="content"><div class="text">
+    <div id="middle"><div class="text">
         Mission statement.<br><br>
         To provide visual side of irrefutable information, which in a time of alternative facts, requires no fact-checking. A more potent and visceral means of surveying hard numbers. It both elucidates latent trends through cognitive pattern recognition faculties, but perhaps more significantly, acts as an immediate and visceral front to the hard information that is otherwise so easily dismissed via alternative facts and competing narratives. This is the electrate come to the spreadsheet. It both markets towards those graphics -hungry grant writers and coadta-consumers, but also enters a new social arena of sharable, digestible, tidbits. The visual compels, is transmitted, allows inspection and pattern recognition, and puts a body to ghostly numbers. A corpus to stand and take a beating, or to beat itself.<br><br>
         Of the postmodern, a theorist wrote it is a series of images, layered and glossy, which never unveil a hard substrate, but which peel off to other more obscure and obfuscated pornography.<br><br>
