--- a/404.html
+++ b/404.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <div id="top">
-	   <a href="index.html">M W Keller</a>
-    </div>
+  <a href="index.html"><div id="top">
+   M W Keller
+  </div></a>
 
     <div id="bottom">
         You appear lost.
