--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
    M W Keller
   </div></a>
 
+<div id="middle"><div class="menu">
+  Salt Spring Digs<br><br>
+  Studies<br>
+  Statement of Intent
+</div></div>
+
   <div id="bottom">
    <a href="mailto:mwkeller@umich.edu" target="_blank">mwkeller@umich.edu</a>
   </div>
