--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
    M W Keller
   </div></a>
 
-<div id="middle"><div class="menu">
-  Salt Spring Digs<br><br>
-  Studies<br>
-  Statement of Intent
+<div id="middle"><div class="menuWrapper">
+  <a href="intent.html"><div class="menu">Salt Spring Digs</div></a><br>
+  <a href="intent.html"><div class="menu">Studies</div></a>
+  <a href="intent.html"><div class="menu">Intent</div></a>
 </div></div>
 
-  <div id="bottom">
-   <a href="mailto:mwkeller@umich.edu" target="_blank">mwkeller@umich.edu</a>
-  </div>
+  <a href="mailto:mwkeller@umich.edu" target="_blank"><div id="bottom">
+   mwkeller@umich.edu
+  </div></a>
 
 </body>
 </html>
