--- a/intent.html
+++ b/intent.html
@@ -34,9 +34,9 @@
         “Today,” Virilio says, “the media no longer exists as narratives but rather as flashes and images. History is therefore being reduced to images”
         </div></div>
 
-    <div id="bottom">
-	   <a href="mailto:mwkeller@umich.edu" target="_blank">mwkeller@umich.edu</a>
-    </div>
+        <a href="mailto:mwkeller@umich.edu" target="_blank"><div id="bottom">
+         mwkeller@umich.edu
+        </div></a>
 
 </body>
 </html>
