--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   </div></a>
 
 <div id="middle"><div class="menuWrapper">
-  <a href="intent.html"><div class="menu">Salt Spring Digs</div></a><br>
-  <a href="intent.html"><div class="menu">Studies</div></a>
-  <a href="intent.html"><div class="menu">Intent</div></a>
+  <a><div class="menu">Salt Spring</div></a><br>
+  <a><div class="menu">Studies</div></a>
+  <a><div class="menu">Intent</div></a>
 </div></div>
 
   <a href="mailto:mwkeller@umich.edu" target="_blank"><div id="bottom">
