--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 </head>
 
 <body>
-  <a href="index.html"><div id="top">
+  <div id="top"><div class="title">
    M W Keller
-  </div></a>
+ </div></div>
 
-<div id="middle"><div class="menuWrapper">
+<div class="menuWrapper">
   <a><div class="menu">Salt Spring</div></a><br>
   <a><div class="menu">Studies</div></a>
   <a><div class="menu">Intent</div></a>
-</div></div>
+</div>
 
-  <a href="mailto:mwkeller@umich.edu" target="_blank"><div id="bottom">
-   mwkeller@umich.edu
-  </div></a>
+<a href="mailto:mwkeller@umich.edu" target="_blank"><div id="bottom"><div class="title">
+ mwkeller@umich.edu
+</div></div></a>
 
 </body>
 </html>
