--- a/intent.html
+++ b/intent.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <a href="index.html"><div id="top">
+    <a href="index.html"><div id="top"><div class="title">
 	   M W Keller
-    </div></a>
+   </div></div></a>
 
     <div id="middle"><div class="text">
         Mission statement.<br><br>
@@ -34,9 +34,9 @@
         “Today,” Virilio says, “the media no longer exists as narratives but rather as flashes and images. History is therefore being reduced to images”
         </div></div>
 
-        <a href="mailto:mwkeller@umich.edu" target="_blank"><div id="bottom">
+        <a href="mailto:mwkeller@umich.edu" target="_blank"><div id="bottom"><div class="title">
          mwkeller@umich.edu
-        </div></a>
+       </div></div></a>
 
 </body>
 </html>
