--- a/index.html
+++ b/index.html
@@ -12,15 +12,22 @@
 </head>
 
 <body>
-  <div id="top"><div class="title">
+  <a href="index.html"><div id="top"><div class="title">
    M W Keller
- </div></div>
+ </div></div></a>
 
-<div class="menuWrapper">
-  <a><div class="menu">Salt Spring</div></a><br>
-  <a><div class="menu">Studies</div></a>
-  <a><div class="menu">Intent</div></a>
-</div>
+<nav><ul>
+    <li><input type="checkbox" id="list-item-1"><label for="list-item-1" class="first">1. Salt Spring</label><ul>
+          <a href="saltspring/windrose.html"><li>1.1 Wind</li></a>
+          <a href="saltspring/programming.html"><li>1.2 Programming</li></a>
+        </ul></li>
+      <li><input type="checkbox" id="list-item-2"><label for="list-item-2">2. Studies</label><ul>
+          <a href="studies/logistics.html"><li>2.1 Logistics</li></a>
+          <a href="studies/dots.html"><li>2.2 Dots</li></a>
+          <a href="studies/space/space.html"><li>2.3 Asteroids</li></a>
+        </ul></li>
+      <a href="intent.html"><li><label for="list-item-3" class="last">3. Intent</label></li></a>
+      </ul></nav>
 
 <a href="mailto:mwkeller@umich.edu" target="_blank"><div id="bottom"><div class="title">
  mwkeller@umich.edu
