--- a/intent.html
+++ b/intent.html
@@ -20,8 +20,8 @@
       Mission statement.<br>
         <ol>
         <li>Programming is the exercise of dictating the future occupation of a building.
-        <ol><li>&nbsp;Programs are generic terms that abstract a general set of activities; these terms cannot convey the complex and changing behavior they describe, nor can they account for the ephemeral extra-human influences on a space; they therefore are used as euphemisms for an unknowable reality.</li>
-        <li>&nbsp;A client may not even approximately predict what will occur in a space.</li>
+        <ol><li>Programs are generic terms that abstract a general set of activities; these terms cannot convey the complex and changing behavior they describe, nor can they account for the ephemeral extra-human influences on a space; they therefore are used as euphemisms for an unknowable reality.</li>
+        <li>A client may not even approximately predict what will occur in a space.</li>
         <li>Over its lifespan, a building may be bought and sold numerous times, transforming from one use to another.</li>
         <li>Consequences of programming are highly normalizing. Behavior becomes expected. Even when program is subverted, it still establishes the nature of the subversion.</li></ol></li>
         <li>Anti-aestheticism is an impossibility, but a direction. Suggested starting point: low-brow materials, lifted wall sections, nearby mundane assemblies, and the end of fussiness / cleanliness / concealment. Mess.</li>
