--- a/saltspring/programming.html
+++ b/saltspring/programming.html
@@ -8,18 +8,22 @@
 <meta name="author" content="Mark Keller">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Intent</title>
-<link href="css/typical.css" rel="stylesheet" type="text/css">
+<link href="../css/typical.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-  <a href="index.html"><div id="top"><div class="title">
+  <a href="../index.html"><div id="top"><div class="title">
    M W Keller
  </div></div></a>
 
+ <div id="middle">
+Programming.
+ </div>
 
-    <a href="index.html"><div id="bottom"><div class="title">
-     You appear lost.
-   </div></div></a>
+
+ <a href="mailto:mwkeller@umich.edu" target="_blank"><div id="bottom"><div class="title">
+  mwkeller@umich.edu
+</div></div></a>
 
 
 </body>
