--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
    M W Keller
  </div></div></a>
 
-<!-- <nav><ul>
+<nav><ul>
     <li><input type="checkbox" id="list-item-1"><label for="list-item-1" class="first">1. Salt Spring</label><ul>
           <a href="saltspring/windrose.html"><li>1.1 Wind</li></a>
-          <a href="saltspring/programming.html"><li>1.2 Programming</li></a>
         </ul></li>
       <li><input type="checkbox" id="list-item-2"><label for="list-item-2">2. Studies</label><ul>
           <a href="studies/logistics.html"><li>2.1 Logistics</li></a>
@@ -27,7 +26,7 @@
           <a href="studies/space/space.html"><li>2.3 Asteroids</li></a>
         </ul></li>
       <a href="intent.html"><li><label for="list-item-3" class="last">3. Intent</label></li></a>
-      </ul></nav> -->
+      </ul></nav>
 
 <a href="mailto:mwkeller@umich.edu" target="_blank"><div id="bottom"><div class="title">
  mwkeller@umich.edu
