--- a/intent.html
+++ b/intent.html
@@ -17,17 +17,11 @@
    </div></div></a>
 
     <div id="middle"><div class="text">
-      Mission statement.<br>
-        <ol>
-        <li>Programming is the exercise of dictating the future occupation of a building.
-        <ol><li>Programs are generic terms that abstract a general set of activities; these terms cannot convey the complex and changing behavior they describe, nor can they account for the ephemeral extra-human influences on a space; they therefore are used as euphemisms for an unknowable reality.</li>
-        <li>A client may not even approximately predict what will occur in a space.</li>
-        <li>Over its lifespan, a building may be bought and sold numerous times, transforming from one use to another.</li>
-        <li>Consequences of programming are highly normalizing. Behavior becomes expected. Even when program is subverted, it still establishes the nature of the subversion.</li></ol></li>
-        <li>Anti-aestheticism is an impossibility, but a direction. Suggested starting point: low-brow materials, lifted wall sections, nearby mundane assemblies, and the end of fussiness / cleanliness / concealment. Mess.</li>
-        <li>Changes at the scale of an architectural epoch are likely not seamless or fluid, but episodic. As such, the conception of an epoch does not preclude rapid construction, maintenance, and demolition. In other words, an architectural epoch is designed as an existence.</li>
-        <li>Transformative architecture remains ambiguous (read Complexity and Contradiction, induction, opacity, the monad, and Baroque design strategies here).</li>
-      </ol>
+            Intent: Architecture at the Scale of the Epoch, and Trauma Therein<br><br><br><br>
+      <blockquote>On the upper level we have a line of variable curvature, without coordinates, a curve with infinite inflection, where inner vectors of concavity mark for each ramification the position of individual monads in suspension. But only on the lower level have we coordinates that determine extrema, extrema that define the stability of figures, figures that organize masses, masses that follow an extrinsic vector of gravity or of the greatest incline....<br><br>
+      </blockquote><h6>From "The Fold: Leibniz and the Baroque" by Gilles Deleuze</h6>
+
+
         </div></div>
 
         <a href="mailto:mwkeller@umich.edu" target="_blank"><div id="bottom"><div class="title">
