--- a/saltspring/windrose.html
+++ b/saltspring/windrose.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Salt Spring Island Wind</title>
-
+  <title>Wind</title>
+  <meta charset="utf-8">
+  <meta name="keywords" content="Humane Architecture">
+  <meta name="description" content="Mark Keller">
+  <meta name="author" content="Mark Keller">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <script async type='text/javascript' src='../js/windrose2.js'></script>
   <link href="../css/nouislider.css" rel="stylesheet">
   <style>
@@ -59,6 +63,6 @@
   <canvas id="canvass" width="400" height="400">
     This text is displayed if your browser does not support HTML5 Canvas.
   </canvas>
-  <script src="js/nouislider.min.js"></script>
+  <script src="../js/nouislider.min.js"></script>
 </body>
 </html>
