--- a/studies/logistics.html
+++ b/studies/logistics.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-<title>Logistics Map</title>
+<title>Logistics</title>
 <meta charset="utf-8">
-<meta name="keywords" content="art, surrealism, space, architecture, Musselmuff, Mark Musselmuff">
-<meta name="description" content="Mark Musselmuff does soft surrealism: fun times good times.">
-<meta name="author" content="Mark Musselmuff">
+<meta name="keywords" content="Humane Architecture">
+<meta name="description" content="Mark Keller">
+<meta name="author" content="Mark Keller">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body{
 	overflow:hidden;
-	cursor:none;	
+	cursor:none;
 }
 .image{
 	position:absolute;
