--- a/saltspring/precipitation.html
+++ b/saltspring/precipitation.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Temperature</title>
+  <title>Precipitation</title>
   <meta charset="utf-8">
   <meta name="keywords" content="Humane Architecture">
   <meta name="description" content="Mark Keller">
   <meta name="author" content="Mark Keller">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script async type='text/javascript' src='../js/temperature.js'></script>
+  <script async type='text/javascript' src='../js/precipitation.js'></script>
   <link href="../css/nouislider.css" rel="stylesheet">
   <style>
   html, body, div, canvas {
@@ -50,7 +50,7 @@
   }
   #key {
     left:50%;
-    margin-left:-80px;
+    margin-left:-60px;
   }
   </style>
 </head>
@@ -59,7 +59,7 @@
     <div class="sliderText" id="monthText">M</div>
     <div class="sliders" id="hour"></div>
     <div class="sliderText" id="hourText">H</div>
-    <div class="sliderText" id="key">VICTORIA INTERNATIONAL AIRPORT AVERAGE TEMPERATURE IN °C, 2014 - 2017</div>
+    <div class="sliderText" id="key">VICTORIA INTERNATIONAL AIRPORT WIND ROSE IN KM/H, 2014 - 2017</div>
   <canvas id="canvass" width="400" height="400">
     This text is displayed if your browser does not support HTML5 Canvas.
   </canvas>
