--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li><input type="checkbox" id="list-item-1"><label for="list-item-1" class="first">1. Salt Spring</label><ul>
           <a href="saltspring/windrose.html"><li>1.1 Wind</li></a>
           <a href="saltspring/temperature.html"><li>1.2 Temperature</li></a>
-          <a href="saltspring/precipitation.html"><li>1.3 Precipitation</li></a>
+          <a href="saltspring/skies.html"><li>1.3 Skies</li></a>
         </ul></li>
       <li><input type="checkbox" id="list-item-2"><label for="list-item-2">2. Studies</label><ul>
           <a href="studies/logistics.html"><li>2.1 Logistics</li></a>
