--- a/saltspring/skies.html
+++ b/saltspring/skies.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Mark Keller">
   <meta name="author" content="Mark Keller">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script async type='text/javascript' src='../js/precipitation.js'></script>
+  <script async type='text/javascript' src='../js/skies.js'></script>
   <link href="../css/nouislider.css" rel="stylesheet">
   <style>
   html, body, div, canvas {
