--- a/saltspring/skies.html
+++ b/saltspring/skies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Precipitation</title>
+  <title>Skies</title>
   <meta charset="utf-8">
   <meta name="keywords" content="Humane Architecture">
   <meta name="description" content="Mark Keller">
@@ -50,7 +50,7 @@
   }
   #key {
     left:50%;
-    margin-left:-60px;
+    margin-left:-30px;
   }
   </style>
 </head>
@@ -59,7 +59,7 @@
     <div class="sliderText" id="monthText">M</div>
     <div class="sliders" id="hour"></div>
     <div class="sliderText" id="hourText">H</div>
-    <div class="sliderText" id="key">VICTORIA INTERNATIONAL AIRPORT WIND ROSE IN KM/H, 2014 - 2017</div>
+    <div class="sliderText" id="key">VICTORIA INTERNATIONAL AIRPORT SKIES, 2014 - 2017</div>
   <canvas id="canvass" width="400" height="400">
     This text is displayed if your browser does not support HTML5 Canvas.
   </canvas>
