--- a/intent.html
+++ b/intent.html
@@ -16,6 +16,7 @@
    </div></div></a>
 
     <div id="middle"><div class="text">
+            We design buildings here.<br>
             Intent: Architecture at the Scale of the Epoch, and Trauma Therein<br><br><br><br>
       <blockquote>On the upper level we have a line of variable curvature, without coordinates, a curve with infinite inflection, where inner vectors of concavity mark for each ramification the position of individual monads in suspension. But only on the lower level have we coordinates that determine extrema, extrema that define the stability of figures, figures that organize masses, masses that follow an extrinsic vector of gravity or of the greatest incline....<br><br>
       </blockquote><h6>From "The Fold: Leibniz and the Baroque" by Gilles Deleuze</h6>
