--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <a href="intent.html"><li><label for="list-item-3" class="last">3. Intent</label></li></a>
       </ul></nav>
 
-<a href="mailto:mwkeller@umich.edu" target="_blank"><div id="bottom"><div class="title">
- mwkeller@umich.edu
+<a href="mailto:mark@mwkeller.com" target="_blank"><div id="bottom"><div class="title">
+mark@mwkeller.com
 </div></div></a>
 
 </body>
