--- a/intent.html
+++ b/intent.html
@@ -24,9 +24,9 @@
 
         </div></div>
 
-        <a href="mailto:mwkeller@umich.edu" target="_blank"><div id="bottom"><div class="title">
-         mwkeller@umich.edu
-       </div></div></a>
+        <a href="mailto:mark@mwkeller.com" target="_blank"><div id="bottom"><div class="title">
+        mark@mwkeller.com
+        </div></div></a>
 
 </body>
 </html>
