--- a/intent.html
+++ b/intent.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-<title>Intent</title>
+<title>About</title>
 <meta charset="utf-8">
 <meta name="keywords" content="Humane Architecture">
 <meta name="description" content="Mark Keller">
@@ -16,10 +16,23 @@
    </div></div></a>
 
     <div id="middle"><div class="text">
-            I design buildings.<br>
-            Intent: Architecture at the Scale of the Epoch, and Trauma Therein<br><br><br><br>
-      <blockquote>On the upper level we have a line of variable curvature, without coordinates, a curve with infinite inflection, where inner vectors of concavity mark for each ramification the position of individual monads in suspension. But only on the lower level have we coordinates that determine extrema, extrema that define the stability of figures, figures that organize masses, masses that follow an extrinsic vector of gravity or of the greatest incline....<br><br>
-      </blockquote><h6>From "The Fold: Leibniz and the Baroque" by Gilles Deleuze</h6>
+            I design buildings.<br><br><br><br>
+INTENT<br>
+Architecture at the Scale of the Epoch, and Trauma Therein<br><br>
+EDUCATION<br>
+2013–2015; M. Arch. University of Michigan; Valedictorian<br>
+2005–2009; B.S. Arch. University of Virginia; Faculty Award for Design Excellence<br><br>
+WORK<br>
+2015-2017; Architect at Olson Kundig: Seattle, WA<br>
+2011-2015; Intern Architect at Roman and Williams: New York, NY<br>
+2010–2011; Intern Architect at Szostak Design: Chapel Hill, NC<br>
+2009 Summer; Construction Laborer at Middlesex Corporation: Windham, NH<br>
+2008 Summer; Intern Architect at Sunbiosis: Charlottesville, VA<br>
+2007 Summer; Intern Architect at Chip Webster & Associates: Nantucket, MA<br><br>
+CONTACT<br>
+mark@mwkeller.com<br>
+434 218 2207<br>
+1705 Summit Ave. Apt. 203, Seattle, WA 98122<br>
 
 
         </div></div>
