--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
  </div></div></a>
 
 <nav><ul>
-    <li><input type="checkbox" id="list-item-1"><label for="list-item-1" class="first">1. Salt Spring</label><ul>
-          <a href="saltspring/windrose.html"><li>1.1 Wind</li></a>
-          <a href="saltspring/temperature.html"><li>1.2 Temperature</li></a>
-          <a href="saltspring/skies.html"><li>1.3 Skies</li></a>
+    <li><input type="checkbox" id="list-item-1"><label for="list-item-1" class="first">1. SALT SPRING</label><ul>
+          <a href="saltspring/windrose.html"><li>1.1 WIND</li></a>
+          <a href="saltspring/temperature.html"><li>1.2 TEMPERATURE</li></a>
+          <a href="saltspring/skies.html"><li>1.3 SKIES</li></a>
         </ul></li>
-      <li><input type="checkbox" id="list-item-2"><label for="list-item-2">2. Studies</label><ul>
-          <a href="studies/logistics.html"><li>2.1 Logistics</li></a>
-          <a href="studies/dots.html"><li>2.2 Dots</li></a>
+      <li><input type="checkbox" id="list-item-2"><label for="list-item-2">2. STUDIES</label><ul>
+          <a href="studies/logistics.html"><li>2.1 LOGISTICS</li></a>
+          <a href="studies/dots.html"><li>2.2 DOTS</li></a>
         </ul></li>
-      <a href="intent.html"><li><label for="list-item-3" class="last">3. Intent</label></li></a>
+      <a href="intent.html"><li><label for="list-item-3" class="last">3. ABOUT</label></li></a>
       </ul></nav>
 
 <a href="mailto:mark@mwkeller.com" target="_blank"><div id="bottom"><div class="title">
