--- a/intent.html
+++ b/intent.html
@@ -32,7 +32,7 @@ WORK<br>
 CONTACT<br>
 mark@mwkeller.com<br>
 434 218 2207<br>
-4409 SW Findlay St., Seattle, WA 98136<br>
+4409 SW Findlay St, Seattle, WA 98136<br>
 
 
         </div></div>
