--- a/intent.html
+++ b/intent.html
@@ -20,7 +20,7 @@
 INTENT<br>
 Architecture at the Scale of the Epoch, and Trauma Therein<br><br>
 EDUCATION<br>
-2013–2015; M. Arch. University of Michigan; Valedictorian<br>
+2013–2015; M. Arch. University of Michigan; Henry Adams Medal<br>
 2005–2009; B.S. Arch. University of Virginia; Faculty Award for Design Excellence<br><br>
 WORK<br>
 2015-2017; Architect at Olson Kundig: Seattle, WA<br>
