--- a/saltspring/programming.html
+++ b/saltspring/programming.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-<title>M W Keller</title>
+<title>Programming</title>
 <meta charset="utf-8">
 <meta name="keywords" content="Humane Architecture">
 <meta name="description" content="Mark Keller">
 <meta name="author" content="Mark Keller">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Intent</title>
 <link href="../css/typical.css" rel="stylesheet" type="text/css">
 </head>
 
