--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
           <a href="saltspring/windrose.html"><li>1.1 WIND</li></a>
           <a href="saltspring/temperature.html"><li>1.2 TEMPERATURE</li></a>
           <a href="saltspring/skies.html"><li>1.3 SKIES</li></a>
+          <a href="saltspring/programming.html"><li>1.4 PROGRAMMING</li></a>
+          <a href="saltspring/schematic.html"><li>1.5 SCHEMATIC DESIGN</li></a>
         </ul></li>
       <li><input type="checkbox" id="list-item-2"><label for="list-item-2">2. STUDIES</label><ul>
           <a href="studies/logistics.html"><li>2.1 LOGISTICS</li></a>
           <a href="studies/dots.html"><li>2.2 DOTS</li></a>
+          <a href="studies/sexy.html"><li>2.3 SEXY ARCHITECTURE</li></a>
         </ul></li>
       <a href="intent.html"><li><label for="list-item-3" class="last">3. ABOUT</label></li></a>
       </ul></nav>
