--- a/studies/sexy.html
+++ b/studies/sexy.html
@@ -99,7 +99,7 @@ window.onload=function startFunction() { change();  stopAction = setInterval(cha
    M W Keller
  </div></div></a>
 
-<div id="middle" class="text">There is nothing serious about <div id="change"></div>.</div>
+  <div id="middle"><div class="text">There is nothing serious about <div id="change"></div>.</div></div>
 
 
  <a href="mailto:mark@mwkeller.com" target="_blank"><div id="bottom"><div class="title">
