--- a/saltspring/schematic.html
+++ b/saltspring/schematic.html
@@ -23,13 +23,13 @@ body{
  <div id="middle">
 <br>Schematic Design. Scroll down.<br><br><br><br><br>
 View from site.<img src="../img/panorama.jpg">
-First sketch.<img src="../img/sketch007.jpg">
-Second sketch.<img src="../img/sketch006.jpg">
-Tectonics.<img src="../img/sketch001.jpg">
-Bermed opening.<img src="../img/sketch005.jpg">
-Ceremony of entrance.<img src="../img/sketch002.jpg">
-Illegal spiral.<img src="../img/sketch003.jpg">
-Bermed hothouse.<img src="../img/sketch004.jpg">
+First sketch.<img src="../img/Sketch007.jpg">
+Second sketch.<img src="../img/Sketch006.jpg">
+Tectonics.<img src="../img/Sketch001.jpg">
+Bermed opening.<img src="../img/Sketch005.jpg">
+Ceremony of entrance.<img src="../img/Sketch002.jpg">
+Illegal spiral.<img src="../img/Sketch003.jpg">
+Bermed hothouse.<img src="../img/Sketch004.jpg">
 Trauma.<img src="../img/aspect01.jpg">
 Early site plan.<img src="../img/A010.jpg">
 Early ground floor plan.<img src="../img/A101.jpg">
