--- a/saltspring/schematic.html
+++ b/saltspring/schematic.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="../css/typical.css" rel="stylesheet" type="text/css">
 <style>
-body{
+html,body{
 	background-color:#fff;
 }
 </style>
@@ -17,7 +17,7 @@ body{
 
 <body>
   <a href="../index.html"><div id="top"><div class="title">
-   M W Keller
+   Mark Keller
  </div></div></a>
 
  <div id="middle">
