--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-<title>M W Keller</title>
+<title>Mark Keller</title>
 <meta charset="utf-8">
 <meta name="keywords" content="Humane Architecture">
 <meta name="description" content="Mark Keller">
@@ -12,7 +12,7 @@
 
 <body>
   <a href="index.html"><div id="top"><div class="title">
-   M W Keller
+   Mark Keller
  </div></div></a>
 
 <nav><ul>
