--- a/saltspring/windrose.html
+++ b/saltspring/windrose.html
@@ -20,10 +20,10 @@
   html, body {
     overflow-x: hidden;
     overflow-y: hidden;
-    font-size: 9px;
-    font-family: monospace;
+    font-size: 10px;
+    font-family: Courier, monospace;
     color: #000;
-    font-weight: bold;
+    background-color:#f6f6f6;
   }
   #month, #hour {
     position: absolute;
