--- a/studies/sexy.html
+++ b/studies/sexy.html
@@ -96,7 +96,7 @@ window.onload=function startFunction() { change();  stopAction = setInterval(cha
 </head>
 <body>
 	<a href="../index.html"><div id="top"><div class="title">
-   M W Keller
+   Mark Keller
  </div></div></a>
 
   <div id="middle"><div class="text">There is nothing sexy about <div id="change"></div>.</div></div>
