--- a/studies/sexy.html
+++ b/studies/sexy.html
@@ -19,6 +19,8 @@
 <script>
 var content = [
 "nailing studs",
+"a stud pocket",
+"a screw spline",
 "pipe penetrations",
 "fire-rated penetrations",
 "through-wall penetrations",
@@ -43,7 +45,7 @@ var content = [
 "dampproofing",
 "pulling wire",
 "gluing it up",
-"gang nailed",
+"gang nailing",
 "king studs",
 "double headers",
 "hose bibs",
@@ -83,6 +85,14 @@ var content = [
 "radius of gyration",
 "tongue and groove joints",
 "slenderness ratio",
+"rim joists",
+"a fertile detail",
+"butt-weld",
+"plug-weld",
+"weep hole",
+"cross-grain shrinkage",
+"jamb extender",
+"caulk joint"
 ];
 var msgPtr = 0;
 var stopAction = null;
