--- a/studies/sexy.html
+++ b/studies/sexy.html
@@ -83,7 +83,7 @@ var content = [
 "knuckle joints",
 "slab penetrations",
 "radius of gyration",
-"tongue and groove joints",
+"tongue-and-groove",
 "slenderness ratio",
 "rim joists",
 "a fertile detail",
@@ -92,7 +92,18 @@ var content = [
 "weep hole",
 "cross-grain shrinkage",
 "jamb extender",
-"caulk joint"
+"caulk joint",
+"the erection sequence",
+"butt swell",
+"beaver chew",
+"log jam",
+"laying studs",
+"deep dynamic compaction",
+"rising damp",
+"pumpable mix",
+"rough opening",
+"ultimate load",
+"member release"
 ];
 var msgPtr = 0;
 var stopAction = null;
