--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ p{
         </button>
     </div>
     <div class="information">
-<p>Architecture by Mark Keller<br><br><br><a href="mailto:mark@mwkeller.com">mark@mwkeller.com</a><br><br>434 218 2207<br>4409 SW Findlay St<br>Seattle, WA 98136</p>
+<p>Architecture by Mark Keller<br><br><br><a href="mailto:mark@mwkeller.com" target="_blank">mark@mwkeller.com</a><br><br><a href="tel:1-434-218-2207" target="_blank">434 218 2207</a><br><a href="https://goo.gl/maps/DH6Enr7sGeE2" target="_blank">4409 SW Findlay St<br>Seattle, WA 98136</a></p>
 </div>
     </div>
   </amp-lightbox>
