--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
   	background: #ffff00;
   }
   .title{
-    width:54vw;
+    width:70vw;
     height:6vw;
     position:fixed;
     left:50%;
     top:50%;
-    margin:-3vw 0 0 -27vw;
+    margin:-3vw 0 0 -35vw;
     text-align: center;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -65,7 +65,6 @@
     top:60%;
     text-align: center;
   }
-
   .fixed-container {
   position: relative;
   width: 100vw;
@@ -124,12 +123,15 @@ p{
 
 @media screen and (max-width: 1080px) {
   button{
-    text-shadow: none;
+    text-shadow: 0px 0px .5px #090909;
     font-size: 24px;
   }
   button:hover, button:focus{
      color:#eee;
-     text-shadow: none;
+     text-shadow: 0px 0px .5px #eee;
+   }
+   p{
+     font-size: 13px;
    }
 }
 
