--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
   a{
   	text-decoration:inherit;font-family:inherit;font-size:inherit;font-style:inherit;line-height:inherit;color:inherit;white-space:nowrap;display: inline;clear: none;
   }
-  a:hover{
-  	background: #ffff00;
-  }
-  a:active{
+  a:hover, a:active{
   	background: #ffff00;
   }
   .title{
@@ -121,14 +118,14 @@ p{
 	background: #ffff00;
 }
 
-@media screen and (max-width: 1080px) {
+@media screen and (max-width: 920px) {
   button{
-    text-shadow: 0px 0px .5px #090909;
-    font-size: 24px;
+    text-shadow: 0px 0px .2px #090909;
+    font-size: 20px;
   }
   button:hover, button:focus{
      color:#eee;
-     text-shadow: 0px 0px .5px #eee;
+     text-shadow: 0px 0px .2px #eee;
    }
    p{
      font-size: 13px;
