--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@ p{
      color:#eee;
      text-shadow: 0px 0px .2px #eee;
    }
+   .title{
+     height:60px;
+    margin:-30px 0 0 -39vw;
+   }
    p{
      font-size: 13px;
    }
