--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@ amp-carousel{
 .amp-carousel-button{
   height:66vh;
   width:12vw;
-  min-width:80px;
+  min-width:36px;
   top:50vh;
   background:none;
   outline:none;
   z-index:9;
 }
-.amp-carousel-button:hover, .amp-carousel-button:active{
+.amp-carousel-button:hover{
   cursor: pointer;
   background:#090909;
 }
