--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ amp-carousel{
   outline:none;
   z-index:9;
 }
-.amp-carousel-button:hover{
+.amp-carousel-button:hover, .amp-carousel-button:active{
   cursor: pointer;
   background:#090909;
 }
@@ -155,6 +155,9 @@ p{
    }
    p{
      font-size: 13px;
+   }
+   .amp-carousel-button:hover, .amp-carousel-button:active{
+     background:none;
    }
 }
 </style>
