--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <title>Mark Keller</title>
   <link rel="canonical" href="http://mwkeller.com/index.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2">
+  <link rel="manifest" href="/manifest.json?v=2">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg?v=2" color="#5bbad5">
+  <link rel="shortcut icon" href="/favicon.ico?v=2">
+  <meta name="theme-color" content="#ffffff">
   <script type="application/ld+json">{
     "@context": "http://schema.org",
     "@type": "HomeAndConstructionBusiness",
